# ai-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
frontend/: index.html  metadata.json  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx  types.ts  utils.ts
frontend/src/components/: BackgroundBeams.tsx  Dashboard.tsx  Features.tsx  Footer.tsx  GatewayAnalytics.tsx  GatewayFlow.tsx  GatewayLogs.tsx  GatewayOverview.tsx  GatewayPlayground.tsx  GatewaySettings.tsx  GatewayView.tsx  Hero.tsx  Navbar.tsx  Profile.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: LandingPage.tsx
frontend/src/services/: apiService.ts  geminiService.ts
src/: analytics.py  db.py  main.py  models.py  routing.py  utils.py
