[project]
name = "ai-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "cachetools>=6.2.4",
    "clickhouse-sqlalchemy>=0.3.2",
    "fastapi>=0.121.3",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.6",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
